<resources>
    <string name="app_name">Android Labs</string>

    <string name="email_text">Enter your email address:</string>
    <string name="email_hint">Type email here</string>
    <string name="password_text">Type your password:</string>
    <string name="password_hint"> </string>

    <string name="profile_text">Your profile</string>
    <string name="profile_name">Your name:</string>
    <string name="profile_name_editText">Enter your name</string>
    <string name="profile_email">Your email:</string>
    <string name="profile_email_editText">Enter your email</string>
    <string name="profile_picture">Your picture:</string>
    <string name="picture_instruction">Click the button above to take a picture</string>


    <string name="chat_ButtonText">Go to Chat</string>
    <string name="sendButton_Text">Send</string>
    <string name="chatMessage_hint">Type here</string>
    <string name="receiveButton_Text">Receive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string> -->

    <!--Lab 7-->
    <string name="toolbar_ButtonText">Go to Toolbar page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>