<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_text"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        />

    <EditText
        android:id="@+id/profile_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/profile_name_editText"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        />

    <EditText
        android:id="@+id/profile_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/profile_email_editText"/>

    <TextView
        android:id="@+id/profile_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        />

    <TextView
        android:id="@+id/picture_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_instruction"
        />

    <Button
        android:id="@+id/chatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_ButtonText"/>
</LinearLayout>