<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/sendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/sendButton_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/messageText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/chatMessage_hint"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/receiveButton"
        app:layout_constraintStart_toEndOf="@+id/sendButton" />

    <Button
        android:id="@+id/receiveButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/receiveButton_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>